[gd_scene load_steps=9 format=2]

[ext_resource path="res://demo.gd" type="Script" id=1]
[ext_resource path="res://addons/terminal/terminal.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/UbuntuMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Ubuntu_mono_regular.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/UbuntuMono-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Terminal" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
dynamicFont = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="font_plus" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 40.0
text = "font +"

[node name="font_minus" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 40.0
text = "font -"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 4 )

[node name="enter" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 384.0
margin_bottom = 40.0
text = "enter"

[node name="new_line" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 388.0
margin_right = 464.0
margin_bottom = 40.0
text = "new line"

[node name="fg_color" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 468.0
margin_right = 496.0
margin_bottom = 40.0
toggle_mode = false
text = "fg"
color = Color( 1, 1, 1, 1 )

[node name="bg_color" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 528.0
margin_bottom = 40.0
toggle_mode = false
text = "fg"

[node name="clean" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 584.0
margin_bottom = 40.0
text = "clean"

[node name="font_style" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 588.0
margin_right = 708.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 0 )
focus_mode = 0
toggle_mode = false
enabled_focus_mode = 0
flat = true

[node name="draw" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 712.0
margin_right = 912.0
margin_bottom = 40.0
text = "Draw with mouse"

[node name="rand_bg" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 916.0
margin_right = 1000.0
margin_bottom = 40.0
text = "Random BG"
[connection signal="resized" from="." to="." method="_on_Panel_resized"]
[connection signal="gui_input" from="VBoxContainer/Terminal" to="." method="_on_Terminal_input_event"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/font_plus" to="." method="_on_font_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/font_minus" to="." method="_on_font_minus_pressed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/new_line" to="." method="_on_new_line_pressed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer/fg_color" to="." method="_on_fg_color_color_changed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer/bg_color" to="." method="_on_bg_color_color_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/clean" to="." method="_on_clean_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/font_style" to="." method="_on_font_style_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/draw" to="." method="_on_draw_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/rand_bg" to="." method="_on_rand_bg_pressed"]
